@@ -15,6 +15,8 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
    o Improve stepwise analysis. Check input files according to the specified step
 
+   o The split_reads.py utility can now handle fastq.gz files
+
 ***********************************
 CHANGES IN VERSION 2.5.2
 
